# Luca-Paciolai

./: AGENTS.md  README.md  agent.md  main.py  pyproject.toml
agentinstructions/: venice_best_practices.md
agentinstructs/: SPEC.md  TODO.md  engineering.md  setup.md  specchange.md  uv.md
luca_paciolai/: cli.py  config.py  ledger.py  llm.py  model_selection.py  models.py  venice_client.py
scripts/: setup.sh
tests/: test_accounts.py  test_cli.py  test_ledger.py  test_llm.py  test_model_selection.py  test_models.py  test_notepad.py  test_venice_client.py
