[project]
name = "luca-paciolai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.88.0",
    "pydantic>=2.11.7",
    "sqlmodel>=0.0.24",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.setuptools]
packages = ["luca_paciolai"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

